ENH: add tweebot datalog reader and file monitoring system

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ tweezer.egg-info/
 
 # certain ipython notebook files
 Sandbox.ipynb
+
+# sublime project files
+*.sublime-project
+*.sublime-workspace
