CLN: restructure the package tree to include example data files

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 base_path = ./
 glob_patterns = *.py
 options = --with-growl --color 
-tests = tests/test_parsers_classify.py
+tests = tests/test_run_rscript.py
