--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ Sandbox.ipynb
 
 # files related to python testing system
 .coverage
+
+# ignore all files related to pythontex except the template itself
+tweezer/templates/pytex/*
+!tweezer/templates/pytex/*.tex
