DEV: add default settings file and ways to use it from the command line; aim is easy configuration of the project

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include docs/*.txt
 include tweezer/data/*/*
+include tweezer/data/default_settings.json
 include tweezer/templates/pytex/pytex_template.tex
 include tweezer/templates/knitr/knitr_template.Rnw
 
