DEV: add handling of settings and configuration files via json; start clean package structure

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,9 @@
 include docs/*.txt
 include tweezer/data/*/*
-include tweezer/data/default_settings.json
+
+include tweezer/data/settings/default_settings.json
+include tweezer/data/settings/default.config.txt
+
 include tweezer/templates/pytex/pytex_template.tex
 include tweezer/templates/knitr/knitr_template.Rnw
 
