ENH: add flexible terminal printing of tweebot and manual configurations; approach is extensible to other config files

--- a/tweezer/data/settings/default_settings.json
+++ b/tweezer/data/settings/default_settings.json
@@ -1,91 +1,89 @@
 {
-    "physics":
-        {
-            // viscosity of water 
-            "viscosity": 0.9e-9,
-
-            // kbT in pN * nm
-            "thermal_energy_pN_nm": 4.14,
-
-            // nm / bp
-            "nano_meter_per_base_pair": 0.338
-        },        
-
-    "polymer_mechanics":
-        {
-            // persistence length P in nm
-            "persistence_length_nm": 53,
-
-            // stretch modulus S in pN
-            "stretch_modulus_pN": 1200
-
-        },
-
-    "gauss_convolution_filter":
-        {
-            "window_size_points": 1000
-        },
-
-    "savitzky_golay_filter":
-        {
-            "window_size_points": 2000
-        },
-    "transcription_analysis":
-        {
-            // L0 in base pairs
-            "dna_start_length_bp": 5094,
-
-            // any pauses that are less than this distance apart will be merged
-            "minimum_distance_between_pauses_bp": 5,
-
-            "no_late_pauses": true,
-
-            "backtrack_cutoff_bp": 5,
-
-            "remove_drift": true,
-
-            "force_limits_pN": [1, 20],
-
-            "normalised_force_limits": [0.3, 1.5],
-
-            // How many nucleotides for residency time calculation
-            "df_interval": 1, 
-
-            // velocity in nt / s
-            "velocity_histogramm_limits_bp_per_s": [-5, 110],
-
-            // bin size in nt / s
-            "velocity_histogramm_bin_size_bp_per_s": 0.5,
-
-            "force_velocity_histogramm_force_bin_size": 0.5,
-
-            "normalized_force_velocity_histogramm_normalized_force_bin_size": 0.01,
-
-            "acceleration_time_ms": 2500,
-
-            // window size (units of dt) for velocity averaging in DTbacktrack
-            "velocity_window": 20,
-
-            // IntoFinP in s: Time we will extend the fv-analysis into the last pause
-            "time_into_last_pause_s": 5,
-
-            "pause_threshold_time_s": 3
-        },
-    "statistical_settings":
-        {
-            "confidence_interval": 0.68269
-        },
-    "general_settings":
-        {
-            "averaging_time_ms": 1
-        },
-    "general_tweebot_settings":
-        {
-
-            // default host addresses
-            "VideoServer1Address" : "dualtrap2",
-            "VideoServer2Address" : "dualtrap1"
-            
-        }
-
+  "physics": {
+    "viscosity": 9E-10,
+    "thermal_energy": 4.14,
+    "nano_meter_per_base_pair": 0.338,
+    "units": {
+      "viscosity": "pN * s / nm^2",
+      "thermal_energy": "pN * nm",
+      "nano_meter_per_base_pair": null
+    }
+  },
+  "polymer_mechanics": {
+    "persistence_length": 53,
+    "stretch_modulus": 1200,
+    "units": {
+      "persistence_length": "nm",
+      "stretch_modulus": "pN"
+    }
+  },
+  "gauss_convolution_filter": {
+    "window_size": 1000,
+    "units": {
+      "window_size": "data_points"
+    }
+  },
+  "savitzky_golay_filter": {
+    "window_size": 2000,
+    "units": {
+      "window_size": "data_points"
+    }
+  },
+  "transcription_analysis": {
+    "dna_start_length": 5094,
+    "minimum_distance_between_pauses": 5,
+    "no_late_pauses": true,
+    "backtrack_cutoff": 5,
+    "remove_drift": true,
+    "force_limits": [
+      1,
+      20
+    ],
+    "normalised_force_limits": [
+      0.3,
+      1.5
+    ],
+    "df_interval": 1,
+    "velocity_histogramm_limits": [
+      -5,
+      110
+    ],
+    "velocity_histogramm_bin_size": 0.5,
+    "force_velocity_histogramm_force_bin_size": 0.5,
+    "normalized_force_velocity_histogramm_normalized_force_bin_size": 0.01,
+    "acceleration_time": 2500,
+    "velocity_window": 20,
+    "time_into_last_pause": 5,
+    "pause_threshold_time": 3,
+    "units": {
+      "dna_start_length": "bp",
+      "minimum_distance_between_pause": "bp",
+      "no_late_pauses": null,
+      "backtrack_cutoff": "bp",
+      "remove_drift": null,
+      "force_limits": "pN",
+      "normalised_force_limits": null,
+      "df_interval": "bp",
+      "velocity_histogramm_limits": "bp / s",
+      "velocity_histogramm_bin_size": "bp / s",
+      "force_velocity_histogramm_force_bin_size": null,
+      "normalized_force_velocity_histogramm_normalized_force_bin_size": null,
+      "acceleration_time": "ms",
+      "velocity_window": "? units of dt?",
+      "time_into_last_pause": "s",
+      "pause_threshold_time": "s"
+    }
+  },
+  "statistical_settings": {
+    "confidence_interval": 0.68269,
+    "units": {
+      "confidence_interval": null
+    }
+  },
+  "general_settings": {
+    "averaging_time": 1,
+    "units": {
+      "averaging_time": "ms"
+    }
+  }
 }
