ENH: clean help command; try first simple gui; add ggplot2 styles for matplotlib; clean files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -25,3 +25,6 @@ recursive-include features *.feature
 recursive-include features *.py
 recursive-include tests *.py
 recursive-include tweezer *.tex
+
+# added by check_manifest.py
+recursive-include tweezer *.enaml
