ENH/DOC: add iPython notebooks as a way of live documentation of common data analysis tasks

--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ tweezer.egg-info/
 
 # certain ipython notebook files
 Sandbox.ipynb
-*.ipynb
+!notebooks/*.ipynb
 
 # sublime project files
 *.sublime-project
