ENH: Data objects directly accessible from root tweezer package, new base class for data sources, documentation fixes, TxtSourceMpi reads and writes files as UTF-8, added man_data, fixed dependencies, updated introduction notebook

--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,7 @@ tox.ini
 tweezer.egg-info/
 
 # certain ipython notebook files
-Sandbox.ipynb
-!notebooks/*.ipynb
+notebooks/.ipynb_checkpoints
 
 # sublime project files
 *.sublime-project
