UPD: changed key style to 'pmXStiffness' instead of 'pmStiffnessX' with same format for column titles (e.g. data: 'pmXDiff') PSD computation now takes overlap instead of nBlocks as default input, PSD plotting updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,11 @@
-*.pyc
-*/*/*.pyc
-examples/
-
-*.py[cod]
-
-# C extensions
-*.so
-
-# Packages
-*.egg
 *.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
 __pycache__
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
-.cache/
-
-build/
-dist/
-sandbox/
-
-convert.log
-tox.ini
-
-tweezer.egg-info/
 
 # certain ipython notebook files
 notebooks/.ipynb_checkpoints
 
-# sublime project files
-*.sublime-project
-*.sublime-workspace
-
 # PyCharm project files
-*.xml
 .idea
-*.iml
 
 # files related to python testing system
 .coverage
@@ -60,24 +13,8 @@ setup.cfg
 bento.info
 
 # ignore all files related to pythontex except the template itself
-tweezer/templates/pytex/*
-!tweezer/templates/pytex/*.tex
+tweezer/legacy/templates/pytex/*
+!tweezer/legacy/templates/pytex/*.tex
 
-# all TODO files
-*.TODO
-
-# Latex extra files
-*.aux
-*.out
-*.log
-*template.pdf
-
-# profile files
-*.profile
-
-# files from nose testing
-setup.json
-tests.json
-
-# ignore Mac specific files
 .DS_Store
+docs/build
