FIX: Minor changes and notes made

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,45 +1,1 @@
-include docs/*.txt
-include tweezer/data/*/*
-
-include tweezer/data/settings/default_settings.json
-include tweezer/data/settings/default.config.txt
-
-include tweezer/templates/pytex/pytex_template.tex
-include tweezer/templates/knitr/knitr_template.Rnw
-
-global-exclude tweezer/templates/pytex/*
-global-exclude tweezer/templates/pytex/pythontex-files-pytex_template/*
-
-# added by check_manifest.py
-include *.md
-include *.py
-include *.txt
-include MANIFEST
-recursive-include docs *.bib
-recursive-include docs *.conf
-recursive-include docs *.jar
-recursive-include docs *.py
-recursive-include docs *.rst
-recursive-include docs Makefile
-recursive-include features *.feature
-recursive-include features *.py
-recursive-include tests *.py
-recursive-include tweezer *.tex
-
-# added by check_manifest.py
-recursive-include tweezer *.enaml
-
-# added by check_manifest.py
-recursive-include tweezer *.Rnw
-recursive-include tweezer *.py
-
-# added by check_manifest.py
-recursive-include tweezer *.feature
-recursive-include tweezer *.md
-
-# added by check_manifest.py
-recursive-include docs *.mp4
-recursive-include tweezer *.cl
-
-# added by check_manifest.py
-recursive-include tweezer *.png
+# reoncsider if this is useful
