UPD: documentation: new make function, create apidoc and html at once

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -52,6 +52,12 @@ help:
 apidoc:
 	sphinx-apidoc -e -o source/ -f ../tweezers/ ../tweezers/debug.py
 
+apidochtml:
+	sphinx-apidoc -e -o source/ -f ../tweezers/ ../tweezers/debug.py
+	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+	@echo
+	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+
 clean:
 	rm -rf $(BUILDDIR)/*
 
